--- a/planr/css/style.css
+++ b/planr/css/style.css
@@ -1586,12 +1586,9 @@ button.swiper-pagination-bullet {
 }
 
 body {
-  -moz-transform: scale(0.9, 0.9);
-  /* Moz-browsers */
-  zoom: 0.9;
-  /* Other non-webkit browsers */
+  -moz-transform: scale(1, 1);
+  zoom: .9;
   zoom: 90%;
-  /* Webkit browsers */
 }
 
 .section-heading {
